cmake_minimum_required(VERSION 2.8)
project( string )
set(Boost_USE_STATIC_LIBS OFF)
SET(Boost_USE_MULTITHREADED ON)
set(Boost_USE_STATIC_RUNTIME OFF)
find_package( Boost 1.65.1 COMPONENTS filesystem)
find_package( OpenCV REQUIRED PATHS ${/home/spencerwf/opencv/cmake} )
include_directories( ${OpenCV_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
add_executable( string string.cpp )
target_link_libraries( string ${OpenCV_LIBS} ${Boost_LIBRARIES})
